// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnsibleRolesSwitcherReducer should add Ansible role to assigned 1`] = `
Object {
  "assignedPagination": Object {
    "page": 1,
    "perPage": 20,
  },
  "assignedRoles": Array [
    Object {
      "id": 4,
      "inherited": true,
      "name": "geerlingguy.java",
    },
    Object {
      "id": 5,
      "name": "naftulikay.golang",
    },
    Object {
      "id": 6,
      "name": "theforeman.foreman_scap_client",
    },
    Object {
      "id": 9,
      "name": "chef.chef",
    },
  ],
  "assignedVariables": Array [],
  "error": Object {
    "error": Object {},
    "errorMsg": "",
    "status": null,
    "statusText": "",
  },
  "formObject": Object {
    "parentId": 15,
    "resourceId": 5,
    "resourceName": "Host",
  },
  "itemCount": 10,
  "loading": false,
  "loadingVariables": false,
  "pagination": Object {
    "page": 1,
    "perPage": 5,
  },
  "results": Array [
    Object {
      "id": 1,
      "name": "sthirugn.motd",
    },
    Object {
      "id": 2,
      "name": "jtyr.ntp",
    },
    Object {
      "id": 3,
      "name": "rvm.ruby",
    },
    Object {
      "id": 4,
      "name": "geerlingguy.java",
    },
    Object {
      "id": 5,
      "name": "naftulikay.golang",
    },
    Object {
      "id": 6,
      "name": "theforeman.foreman_scap_client",
    },
    Object {
      "id": 7,
      "name": "ansible.ansible",
    },
    Object {
      "id": 8,
      "name": "puppet.puppet",
    },
    Object {
      "id": 9,
      "name": "chef.chef",
    },
    Object {
      "id": 10,
      "name": "salt.salt",
    },
    Object {
      "id": 11,
      "name": "anonymous.something",
    },
  ],
  "toDestroyRoles": Array [],
  "variablesError": Object {
    "error": Object {},
    "errorMsg": "",
    "status": null,
    "statusText": "",
  },
}
`;

exports[`AnsibleRolesSwitcherReducer should remove Ansible role from assigned 1`] = `
Object {
  "assignedPagination": Object {
    "page": 1,
    "perPage": 20,
  },
  "assignedRoles": Array [
    Object {
      "id": 4,
      "inherited": true,
      "name": "geerlingguy.java",
    },
    Object {
      "id": 5,
      "name": "naftulikay.golang",
    },
  ],
  "assignedVariables": Array [],
  "error": Object {
    "error": Object {},
    "errorMsg": "",
    "status": null,
    "statusText": "",
  },
  "formObject": Object {
    "parentId": 15,
    "resourceId": 5,
    "resourceName": "Host",
  },
  "itemCount": 12,
  "loading": false,
  "loadingVariables": false,
  "pagination": Object {
    "page": 1,
    "perPage": 5,
  },
  "results": Array [
    Object {
      "id": 1,
      "name": "sthirugn.motd",
    },
    Object {
      "id": 2,
      "name": "jtyr.ntp",
    },
    Object {
      "id": 3,
      "name": "rvm.ruby",
    },
    Object {
      "id": 4,
      "name": "geerlingguy.java",
    },
    Object {
      "id": 5,
      "name": "naftulikay.golang",
    },
    Object {
      "id": 6,
      "name": "theforeman.foreman_scap_client",
    },
    Object {
      "id": 7,
      "name": "ansible.ansible",
    },
    Object {
      "id": 8,
      "name": "puppet.puppet",
    },
    Object {
      "id": 9,
      "name": "chef.chef",
    },
    Object {
      "id": 10,
      "name": "salt.salt",
    },
    Object {
      "id": 11,
      "name": "anonymous.something",
    },
  ],
  "toDestroyRoles": Array [
    Object {
      "destroy": true,
      "id": 6,
      "name": "theforeman.foreman_scap_client",
    },
  ],
  "variablesError": Object {
    "error": Object {},
    "errorMsg": "",
    "status": null,
    "statusText": "",
  },
}
`;

exports[`AnsibleRolesSwitcherReducer should remove ansible variable 1`] = `
Object {
  "assignedRoles": Array [],
  "assignedVariables": Array [
    Object {
      "ansibleVariables": Array [
        Object {
          "id": 15,
          "parameter": "motd",
        },
      ],
      "id": 1,
      "name": "sthirugn.motd",
    },
  ],
  "error": Object {
    "errorMsg": "",
    "status": "",
    "statusText": "",
  },
  "formObject": Object {
    "parentId": "",
    "resourceId": "",
    "resourceName": "",
  },
  "inheritedRoleIds": Array [],
  "itemCount": 0,
  "loading": false,
  "loadingVariables": false,
  "pagination": Object {
    "page": 1,
    "perPage": 10,
  },
  "results": Array [],
  "toDestroyRoles": Array [],
  "variablesError": Object {
    "error": Object {},
    "errorMsg": "",
    "status": null,
    "statusText": "",
  },
}
`;

exports[`AnsibleRolesSwitcherReducer should return initial state 1`] = `
Object {
  "assignedRoles": Array [],
  "assignedVariables": Array [],
  "error": Object {
    "errorMsg": "",
    "status": "",
    "statusText": "",
  },
  "formObject": Object {
    "parentId": "",
    "resourceId": "",
    "resourceName": "",
  },
  "inheritedRoleIds": Array [],
  "itemCount": 0,
  "loading": false,
  "loadingVariables": false,
  "pagination": Object {
    "page": 1,
    "perPage": 10,
  },
  "results": Array [],
  "toDestroyRoles": Array [],
  "variablesError": Object {
    "error": Object {},
    "errorMsg": "",
    "status": null,
    "statusText": "",
  },
}
`;

exports[`AnsibleRolesSwitcherReducer should set form object 1`] = `
Object {
  "assignedPagination": Object {
    "page": 1,
    "perPage": 20,
  },
  "assignedRoles": Array [
    Object {
      "id": 4,
      "inherited": true,
      "name": "geerlingguy.java",
    },
    Object {
      "id": 5,
      "name": "naftulikay.golang",
    },
    Object {
      "id": 6,
      "name": "theforeman.foreman_scap_client",
    },
  ],
  "assignedVariables": Array [],
  "error": Object {
    "error": Object {},
    "errorMsg": "",
    "status": null,
    "statusText": "",
  },
  "formObject": Object {
    "parentId": 6,
    "resourceId": 7,
    "resourceName": "Hostgroup",
  },
  "itemCount": 11,
  "loading": false,
  "loadingVariables": false,
  "pagination": Object {
    "page": 1,
    "perPage": 5,
  },
  "results": Array [
    Object {
      "id": 1,
      "name": "sthirugn.motd",
    },
    Object {
      "id": 2,
      "name": "jtyr.ntp",
    },
    Object {
      "id": 3,
      "name": "rvm.ruby",
    },
    Object {
      "id": 4,
      "name": "geerlingguy.java",
    },
    Object {
      "id": 5,
      "name": "naftulikay.golang",
    },
    Object {
      "id": 6,
      "name": "theforeman.foreman_scap_client",
    },
    Object {
      "id": 7,
      "name": "ansible.ansible",
    },
    Object {
      "id": 8,
      "name": "puppet.puppet",
    },
    Object {
      "id": 9,
      "name": "chef.chef",
    },
    Object {
      "id": 10,
      "name": "salt.salt",
    },
    Object {
      "id": 11,
      "name": "anonymous.something",
    },
  ],
  "toDestroyRoles": Array [],
  "variablesError": Object {
    "error": Object {},
    "errorMsg": "",
    "status": null,
    "statusText": "",
  },
}
`;

exports[`AnsibleRolesSwitcherReducer should start loading on Ansible roles request 1`] = `
Object {
  "assignedRoles": Array [],
  "assignedVariables": Array [],
  "error": Object {
    "errorMsg": "",
    "status": "",
    "statusText": "",
  },
  "formObject": Object {
    "parentId": "",
    "resourceId": "",
    "resourceName": "",
  },
  "inheritedRoleIds": Array [],
  "itemCount": 0,
  "loading": true,
  "loadingVariables": false,
  "pagination": Object {
    "page": 1,
    "perPage": 10,
  },
  "results": Array [],
  "toDestroyRoles": Array [],
  "variablesError": Object {
    "error": Object {},
    "errorMsg": "",
    "status": null,
    "statusText": "",
  },
}
`;

exports[`AnsibleRolesSwitcherReducer should start loading variables 1`] = `
Object {
  "assignedRoles": Array [],
  "assignedVariables": Array [],
  "error": Object {
    "errorMsg": "",
    "status": "",
    "statusText": "",
  },
  "formObject": Object {
    "parentId": "",
    "resourceId": "",
    "resourceName": "",
  },
  "inheritedRoleIds": Array [],
  "itemCount": 0,
  "loading": false,
  "loadingVariables": true,
  "pagination": Object {
    "page": 1,
    "perPage": 10,
  },
  "results": Array [],
  "toDestroyRoles": Array [],
  "variablesError": Object {
    "error": Object {},
    "errorMsg": "",
    "status": null,
    "statusText": "",
  },
}
`;

exports[`AnsibleRolesSwitcherReducer should stop loading on Ansible roles error 1`] = `
Object {
  "assignedRoles": Array [],
  "assignedVariables": Array [],
  "error": Object {
    "errorMsg": "Failed to fetch Ansible Roles from server.",
    "statusText": "500",
  },
  "formObject": Object {
    "parentId": "",
    "resourceId": "",
    "resourceName": "",
  },
  "inheritedRoleIds": Array [],
  "itemCount": 0,
  "loading": false,
  "loadingVariables": false,
  "pagination": Object {
    "page": 1,
    "perPage": 10,
  },
  "results": Array [],
  "toDestroyRoles": Array [],
  "variablesError": Object {
    "error": Object {},
    "errorMsg": "",
    "status": null,
    "statusText": "",
  },
}
`;

exports[`AnsibleRolesSwitcherReducer should stop loading on Ansible roles success 1`] = `
Object {
  "assignedRoles": Array [
    Object {
      "id": 4,
      "name": "geerlingguy.java",
    },
    Object {
      "id": 5,
      "name": "naftulikay.golang",
    },
    Object {
      "id": 6,
      "name": "theforeman.foreman_scap_client",
    },
  ],
  "assignedVariables": Array [],
  "error": Object {
    "errorMsg": "",
    "status": "",
    "statusText": "",
  },
  "formObject": Object {
    "parentId": "",
    "resourceId": "",
    "resourceName": "",
  },
  "inheritedRoleIds": Array [
    4,
  ],
  "itemCount": 11,
  "loading": false,
  "loadingVariables": false,
  "pagination": Object {
    "page": 1,
    "perPage": 5,
  },
  "results": Array [
    Object {
      "id": 1,
      "name": "sthirugn.motd",
    },
    Object {
      "id": 2,
      "name": "jtyr.ntp",
    },
    Object {
      "id": 3,
      "name": "rvm.ruby",
    },
    Object {
      "id": 4,
      "name": "geerlingguy.java",
    },
    Object {
      "id": 5,
      "name": "naftulikay.golang",
    },
    Object {
      "id": 6,
      "name": "theforeman.foreman_scap_client",
    },
    Object {
      "id": 7,
      "name": "ansible.ansible",
    },
    Object {
      "id": 8,
      "name": "puppet.puppet",
    },
    Object {
      "id": 9,
      "name": "chef.chef",
    },
    Object {
      "id": 10,
      "name": "salt.salt",
    },
    Object {
      "id": 11,
      "name": "anonymous.something",
    },
  ],
  "toDestroyRoles": Array [],
  "variablesError": Object {
    "error": Object {},
    "errorMsg": "",
    "status": null,
    "statusText": "",
  },
}
`;

exports[`AnsibleRolesSwitcherReducer should stop loading on variables error 1`] = `
Object {
  "assignedRoles": Array [],
  "assignedVariables": Array [],
  "error": Object {
    "errorMsg": "",
    "status": "",
    "statusText": "",
  },
  "formObject": Object {
    "parentId": "",
    "resourceId": "",
    "resourceName": "",
  },
  "inheritedRoleIds": Array [],
  "itemCount": 0,
  "loading": false,
  "loadingVariables": false,
  "pagination": Object {
    "page": 1,
    "perPage": 10,
  },
  "results": Array [],
  "toDestroyRoles": Array [],
  "variablesError": Object {
    "error": Object {
      "description": "You seem to be missing one of the following permissions: ",
      "message": "Access Denied",
      "missingPermissions": Array [
        "view_ansible_variables",
      ],
    },
    "errorMsg": "Failed to fetch Ansible Roles from server.",
    "status": 403,
    "statusText": "Forbidden",
  },
}
`;

exports[`AnsibleRolesSwitcherReducer should stop loading variables on success 1`] = `
Object {
  "assignedRoles": Array [],
  "assignedVariables": Array [
    Object {
      "ansibleVariables": Array [
        Object {
          "id": 15,
          "parameter": "motd",
        },
      ],
      "id": 1,
      "name": "sthirugn.motd",
    },
    Object {
      "ansibleVariables": Array [
        Object {
          "id": 16,
          "parameter": "whatever",
        },
      ],
      "id": 2,
      "name": "jtyr.ntp",
    },
  ],
  "error": Object {
    "errorMsg": "",
    "status": "",
    "statusText": "",
  },
  "formObject": Object {
    "parentId": "",
    "resourceId": "",
    "resourceName": "",
  },
  "inheritedRoleIds": Array [],
  "itemCount": 0,
  "loading": false,
  "loadingVariables": false,
  "pagination": Object {
    "page": 1,
    "perPage": 10,
  },
  "results": Array [],
  "toDestroyRoles": Array [],
  "variablesError": Object {
    "error": Object {},
    "errorMsg": "",
    "status": null,
    "statusText": "",
  },
}
`;
